--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -191,10 +191,15 @@
       
     </div>
 <section class="card tone">
-  <h2>🪷 Next Step</h2>
-  <p>Ready to keep building?  
-  The <strong>Diana Air 6-Week Blueprint</strong> deepens this foundation with phase-by-phase guidance, live support, and expanded rhythm tracking.</p>
-  <div style="text-align:center; margin-top:14px;">
+  <h2>🔥 Ready to keep building? <strong>Next Step</strong> — From Reset to Rhythm</h3>
+  <p>You’ve reconnected to your body with the 5 day Raw to Reset — now let’s build the rhythm where you can thrive.  
+The <strong>Diana Air 6-Week Blueprint</strong> is your next chapter — integrating 
+    <strong>nutrition</strong>, <strong>movement</strong>, <strong>supplements</strong>, and <strong>phase-specific physiology</strong> 
+    so you can live in sync with your cycle instead of fighting against it.
+    <p style="margin-bottom:14px;">
+    Each week builds on your natural rhythm — aligning energy, mood, and metabolism to support strength, clarity, and confidence through every phase.
+  </p>
+      <div style="text-align:center; margin-top:14px;">
     <a class="btn ghost" href="https://artificialmomentum.com/waitlist">Join the 6-Week Blueprint Waitlist</a>
   </div>
 </section>
