--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -191,7 +191,8 @@
       
     </div>
 <section class="card tone">
-  <h2>🔥 Ready to keep building? <strong>Next Step</strong> — From Reset to Rhythm</h3>
+  <h2>🔥 Ready to keep building? 
+    <h3 style="color:#6b2f23; margin-top:0;">✨ Next Step — From Reset to Rhythm</h3>
   <p>You’ve reconnected to your body with the 5 day Raw to Reset — now let’s build the rhythm where you can thrive.  
 The <strong>Diana Air 6-Week Blueprint</strong> is your next chapter — integrating 
     <strong>nutrition</strong>, <strong>movement</strong>, <strong>supplements</strong>, and <strong>phase-specific physiology</strong> 
