--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -192,7 +192,7 @@
     </div>
 <section class="card tone">
   <div style="text-align:center; margin-top:14px;"></div>
-  <h2>🔥 Ready to keep building? 
+  <a<h2>🔥 Ready to keep building?</a> 
     <h3 style="color:#6b2f23; margin-top:0;"> Next Step — From Reset to Rhythm</h3>
   <p>You’ve reconnected to your body with the 5 day Raw to Reset — now let’s build the rhythm where you can thrive.  
 The <strong>Diana Air 6-Week Blueprint</strong> is your next chapter — integrating 
