--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -189,7 +189,11 @@
       <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
       <a class="btn ghost" id="print-pdf">Download PDF</a>
       
-<section class="card tone" style="text-align:center; padding:20px;">
+<!-- Close the previous button section properly -->
+</div>  
+
+<!-- Now start the new block cleanly -->
+<section class="card tone" style="text-align:center; padding:20px; margin-top:24px;">
   <h2 style="margin-bottom:8px;">🔥 Ready to keep building?</h2>
   <h3 style="color:#6b2f23; margin-top:0;">Next Step — From Reset to Rhythm</h3>
 
