--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -192,27 +192,28 @@
 <!-- Close the previous button section properly -->
 </div>  
 
-<!-- Now start the new block cleanly -->
-<section class="card tone" style="text-align:center; padding:20px; margin-top:24px;">
-  <h2 style="margin-bottom:8px;">🔥 Ready to keep building?</h2>
-  <h3 style="color:#6b2f23; margin-top:0;">Next Step — From Reset to Rhythm</h3>
+<section class="card tone" style="padding:24px; margin-top:28px;">
+  <h2 style="text-align:center; margin-bottom:8px;">🔥 Ready to keep building?</h2>
+  <h3 style="color:#6b2f23; margin-top:0; text-align:left;">Next Step — From Reset to Rhythm</h3>
 
-  <p style="text-align:left; margin: 0 auto; max-width: 640px;">
-    You’ve reconnected to your body with the 5-day <strong>Raw to Reset</strong> — now let’s build the rhythm that keeps you there.
-  </p>
+  <div style="max-width:760px; margin:0 auto; text-align:left;">
+    <p>
+      You’ve reconnected to your body with the 5-day <strong>Raw to Reset</strong> — now let’s build the rhythm that keeps you there.
+    </p>
 
-  <p style="text-align:left; margin: 12px auto; max-width: 640px;">
-    <strong>The Diana Air 6-Week Blueprint</strong> is your next chapter — integrating 
-    <strong>nutrition</strong>, <strong>movement</strong>, <strong>supplements</strong>, and 
-    <strong>phase-specific physiology</strong> so you can live in sync with your cycle instead of fighting against it.
-  </p>
+    <p>
+      <strong>The Diana Air 6-Week Blueprint</strong> is your next chapter — integrating 
+      <strong>nutrition</strong>, <strong>movement</strong>, <strong>supplements</strong>, and 
+      <strong>phase-specific physiology</strong> so you can live in sync with your cycle instead of fighting against it.
+    </p>
 
-  <p style="text-align:left; margin: 12px auto 24px auto; max-width: 640px;">
-    Each week builds on your natural rhythm — aligning energy, mood, and metabolism to support strength, clarity, and confidence through every phase.
-  </p>
+    <p style="margin-bottom:24px;">
+      Each week builds on your natural rhythm — aligning energy, mood, and metabolism to support strength, clarity, and confidence through every phase.
+    </p>
 
-  <div style="text-align:center; margin-top:14px;">
-    <a class="btn ghost" href="https://artificialmomentum.com/waitlist">Join the 6-Week Blueprint Waitlist</a>
+    <div style="text-align:center; margin-top:18px;">
+      <a class="btn ghost" href="https://artificialmomentum.com/waitlist">Join the 6-Week Blueprint Waitlist</a>
+    </div>
   </div>
 </section>
 
