duplicate from backup

--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -192,6 +192,28 @@
 <!-- Close the previous button section properly -->
 </div>  
 
+    </div>
+        <!-- Next Step Card -->
+<section class="card tone">
+  <h2>🪄 Next Step: Diana Air 6-Week Blueprint</h2>
+  <p>
+    You’ve just reset in <strong>5 days</strong>. Imagine <strong>6 full weeks</strong> — 
+    every phase mapped, supported, and lived. The Blueprint gives you structure, rhythm sheets, 
+    and live coaching support to make this your new normal.
+  </p>
+  <div style="text-align:center; margin-top:14px;">
+    <a class="btn secondary" 
+       href="https://artificialmomentum.com/waitlist" 
+       style="display:inline-block;background:#2D2D2D;color:#ffffff;
+              text-decoration:none;padding:12px 20px;border-radius:999px;
+              font-weight:700;">
+      Join the 6-Week Program Waitlist
+    </a>
+  </div>
+</section>
+
+
+
 <section class="card tone" style="padding:24px; margin-top:28px;">
   <h2 style="text-align:center; margin-bottom:8px;">🔥 Ready to keep building?</h2>
   <h3 style="color:#6b2f23; margin-top:0; text-align:left;">Next Step — From Reset to Rhythm</h3>
