--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -188,48 +188,27 @@
       <a class="btn ghost" href="https://raw.artificialmomentum.com/day5/day5-journal">✒️ Journal Page</a>
       <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
       <a class="btn ghost" id="print-pdf">Download PDF</a>
+
       
-
-<section class="card tone" style="padding:24px; margin-top:28px;">
-  <h2 style="text-align:center; margin-bottom:8px;">🔥 Ready to keep building?</h2>
-  <h3 style="color:#6b2f23; margin-top:0; text-align:left;">Next Step — From Reset to Rhythm</h3>
-
-  <div style="max-width:760px; margin:0 auto; text-align:left;">
-    <p>
-      You’ve reconnected to your body with the 5-day <strong>Raw to Reset</strong> — now let’s build the rhythm that keeps you there.
-    </p>
-
-    <p>
-      <strong>The Diana Air 6-Week Blueprint</strong> is your next chapter — integrating 
-      <strong>nutrition</strong>, <strong>movement</strong>, <strong>supplements</strong>, and 
-      <strong>phase-specific physiology</strong> so you can live in sync with your cycle instead of fighting against it.
-    </p>
-
-    <p style="margin-bottom:24px;">
-      Each week builds on your natural rhythm — aligning energy, mood, and metabolism to support strength, clarity, and confidence through every phase.
-    </p>
-
-    <div style="text-align:center; margin-top:18px;">
-      <a class="btn ghost" href="https://artificialmomentum.com/waitlist">Join the 6-Week Blueprint Waitlist</a>
-    </div>
+</div>
+        <!-- Next Step Card -->
+<section class="card tone">
+  <h2>🪄 Next Step: Diana Air 6-Week Blueprint</h2>
+  <p>
+    You’ve just reset in <strong>5 days</strong>. Imagine <strong>6 full weeks</strong> — 
+    every phase mapped, supported, and lived. The Blueprint gives you structure, rhythm sheets, 
+    and live coaching support to make this your new normal.
+  </p>
+  <div style="text-align:center; margin-top:14px;">
+    <a class="btn secondary" 
+       href="https://artificialmomentum.com/waitlist" 
+       style="display:inline-block;background:#2D2D2D;color:#ffffff;
+              text-decoration:none;padding:12px 20px;border-radius:999px;
+              font-weight:700;">
+      Join the 6-Week Program Waitlist
+    </a>
   </div>
 </section>
-
-<div class="blueprint-next-step" style="background:#fff7f4; border:1px solid #ffd7cc; border-radius:18px; padding:20px; margin-top:30px;">
-  <h3 style="color:#6b2f23; margin-top:0;">✨ Next Step — From Reset to Rhythm</h3>
-  <p style="margin-bottom:14px;">
-    You’ve reconnected to your body — now let’s build the rhythm that keeps you there.
-    The <strong>Diana Air 6-Week Blueprint</strong> is your next chapter — integrating 
-    <strong>nutrition</strong>, <strong>movement</strong>, <strong>supplements</strong>, and <strong>phase-specific physiology</strong> 
-    so you can live in sync with your cycle instead of fighting against it.
-  </p>
-  <p style="margin-bottom:14px;">
-    Each week builds on your natural rhythm — aligning energy, mood, and metabolism to support strength, clarity, and confidence through every phase.
-  </p>
-  <a href="#" style="display:inline-block; background:#fa9884; color:#fff; text-decoration:none; padding:12px 18px; border-radius:12px; font-weight:600;">
-    Join the 6-Week Blueprint Waitlist
-  </a>
-</div>
 
 
 
