--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -193,11 +193,17 @@
 </div>
         <!-- Next Step Card -->
 <section class="card tone">
-  <h2>🪄 Next Step: Diana Air 6-Week Blueprint</h2>
+  <h2>Ready to Keep Building? 🦋 Next Step: Diana Air 6-Week Blueprint</h2>
   <p>
     You’ve just reset in <strong>5 days</strong>. Imagine <strong>6 full weeks</strong> — 
     every phase mapped, supported, and lived. The Blueprint gives you structure, rhythm sheets, 
     and live coaching support to make this your new normal.
+    your next chapter — integrating 
+    <strong>nutrition</strong>, <strong>movement</strong>, <strong>supplements</strong>, and <strong>phase-specific physiology</strong> 
+    so you can live in sync with your cycle instead of fighting against it.
+  </p>
+  <p style="margin-bottom:14px;">
+    Each week builds on your natural rhythm — aligning energy, mood, and metabolism to support strength, clarity, and confidence through every phase.
   </p>
   <div style="text-align:center; margin-top:14px;">
     <a class="btn secondary" 
@@ -209,6 +215,23 @@
     </a>
   </div>
 </section>
+
+<div class="blueprint-next-step" style="background:#fff7f4; border:1px solid #ffd7cc; border-radius:18px; padding:20px; margin-top:30px;">
+  <h3 style="color:#6b2f23; margin-top:0;">✨ Next Step — From Reset to Rhythm</h3>
+  <p style="margin-bottom:14px;">
+    You’ve reconnected to your body — now let’s build the rhythm that keeps you there.
+    The <strong>Diana Air 6-Week Blueprint</strong> is your next chapter — integrating 
+    <strong>nutrition</strong>, <strong>movement</strong>, <strong>supplements</strong>, and <strong>phase-specific physiology</strong> 
+    so you can live in sync with your cycle instead of fighting against it.
+  </p>
+  <p style="margin-bottom:14px;">
+    Each week builds on your natural rhythm — aligning energy, mood, and metabolism to support strength, clarity, and confidence through every phase.
+  </p>
+  <a href="#" style="display:inline-block; background:#fa9884; color:#fff; text-decoration:none; padding:12px 18px; border-radius:12px; font-weight:600;">
+    Join the 6-Week Blueprint Waitlist
+  </a>
+</div>
+
 
 
 
