change button colour

--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -193,7 +193,7 @@
 </div>
         <!-- Next Step Card -->
 <section class="card tone">
-  <h2>Ready to Keep Building? 🦋 Next Step: Diana Air 6-Week Blueprint</h2>
+  <h3 style="color:#6b2f23; margin-top:0;">Ready to Keep Building? 🦋 Next Step: Diana Air 6-Week Blueprint</h2>
   <p>
     You’ve just reset in <strong>5 days</strong>. Imagine <strong>6 full weeks</strong> — 
     every phase mapped, supported, and lived. The Blueprint gives you structure, rhythm sheets, 
@@ -208,7 +208,7 @@
   <div style="text-align:center; margin-top:14px;">
     <a class="btn secondary" 
        href="https://artificialmomentum.com/waitlist" 
-       style="display:inline-block;background:#2D2D2D;color:#ffffff;
+       style="display:inline-block;background:#FC8B73;color:#ffffff;
               text-decoration:none;padding:12px 20px;border-radius:999px;
               font-weight:700;">
       Join the 6-Week Program Waitlist
