--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -208,7 +208,7 @@
   <div style="text-align:center; margin-top:14px;">
     <a class="btn secondary" 
        href="https://artificialmomentum.com/waitlist" 
-       style="display:inline-block;background:#FC8B73;color:#ffffff;
+       style="display:inline-block;background:#ffffff;color:#FC8B73;
               text-decoration:none;padding:12px 20px;border-radius:999px;
               font-weight:700;">
       Join the 6-Week Program Waitlist
