--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -211,7 +211,7 @@
        style="display:inline-block;background:#ffffff;color:#FC8B73;
               text-decoration:none;padding:12px 20px;border-radius:999px;
               font-weight:700;">
-      Join the 6-Week Program Waitlist
+      <a class="btn ghost" Join the 6-Week Program Waitlist
     </a>
   </div>
 </section>
