Elias tidy up to the next step card

--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -191,6 +191,44 @@
 
       
 </div>
+
+<!-- Next Step Card -->
+<section class="card tone" style="padding:24px; margin-top:28px;">
+  <h3 style="color:#6b2f23; margin-top:0; text-align:center;">
+    Ready to Keep Building? 🦋 Next Step: Diana Air 6-Week Blueprint
+  </h3>
+
+  <div style="max-width:760px; margin:0 auto; text-align:left;">
+    <p>
+      You’ve just reset in <strong>5 days</strong>. Imagine <strong>6 full weeks</strong> — 
+      every phase mapped, supported, and lived. The Blueprint gives you structure, rhythm sheets, 
+      and live coaching support to make this your new normal.
+    </p>
+
+    <p>
+      Your next chapter — integrating <strong>nutrition</strong>, <strong>movement</strong>, 
+      <strong>supplements</strong>, and <strong>phase-specific physiology</strong> 
+      so you can live in sync with your cycle instead of fighting against it.
+    </p>
+
+    <p style="margin-bottom:24px;">
+      Each week builds on your natural rhythm — aligning energy, mood, and metabolism to support strength, clarity, and confidence through every phase.
+    </p>
+
+    <div style="text-align:center; margin-top:20px;">
+      <a href="https://artificialmomentum.com/waitlist" 
+         style="display:inline-block; padding:12px 24px; border:2px solid #FC8B73; 
+                border-radius:999px; color:#FC8B73; text-decoration:none; 
+                font-weight:700; background:transparent; 
+                transition: all 0.25s ease;">
+        Join the 6-Week Program Waitlist
+      </a>
+    </div>
+  </div>
+</section>
+
+
+      </div>
         <!-- Next Step Card -->
 <section class="card tone">
   <h3 style="color:#6b2f23; margin-top:0;">Ready to Keep Building? 🦋 Next Step: Diana Air 6-Week Blueprint</h2>
