--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -212,7 +212,8 @@
     <a class="btn secondary" 
        href="https://artificialmomentum.com/waitlist" 
        style="display:inline-block;background:#ffffff;color:#FC8B73;
-              text-decoration:none;padding:12px 20px;border-radius:999px;
+              text-decoration:none;padding:12px 20px;
+              border:2px solid #FC8B73; border-radius:999px;
               font-weight:700;">
       Join the 6-Week Program Waitlist
     </a>
