--- a/index.html
+++ b/index.html
@@ -131,12 +131,7 @@ img.loaded {
     <div class="truth-bomb">Hormone hell? You're Not Crazy!</div>
     <h1>Bring the chaos — I’ll bring the map. 🗺️</h1>
 
-    <p>This is for the women who are tired of second-guessing their cycle, hormones,
-      or their HRT protocol. If you're spinning in circles trying to figure out what the
-      hell is happening to your body — welcome.</p>
-
-      <p>This is for the women who are tired of second-guessing their cycle, hormones,
-  or their HRT protocol. If you're spinning in circles trying to figure out what the
+          <p>This is for the women who are tired of second-guessing their cycle, or their hormone protocol. If you're spinning in circles trying to figure out what the
   hell is happening to your body — welcome.</p>
 
 <p style="font-size:1rem; color:#6b2f23; text-align:center; margin:1.25rem 0;">
@@ -147,11 +142,6 @@ img.loaded {
 <p>For 5 days, I’ll be in your ear (video's & email) — helping you
   untangle the fog, the fatigue, the rage, the cravings, the heartbreak of not
   feeling like yourself.</p>
-
-
-    <p>For 5 days, I’ll be in your ear (video's & email) — helping you
-      untangle the fog, the fatigue, the rage, the cravings, the heartbreak of not
-      feeling like yourself.</p>
 
     <p>I’ve lived it. I’ve researched it. And I’m building
       tools to help us reclaim clarity, vitality, and power.</p>
