--- a/nov30/index.html
+++ b/nov30/index.html
@@ -131,9 +131,13 @@ img.loaded {
     <div class="truth-bomb">Hormone hell? You're Not Crazy!</div>
     <h1>Bring the chaos — I’ll bring the map. 🗺️</h1>
 
-    <p>This is for the women who are tired of second-guessing their cycle, hormones,
-      or their HRT protocol. If you're spinning in circles trying to figure out what the
-      hell is happening to your body — welcome.</p>
+          <p>This is for the women who are tired of second-guessing their cycle, or their hormone protocol. If you're spinning in circles trying to figure out what the
+  hell is happening to your body — welcome.</p>
+
+<p style="font-size:1rem; color:#6b2f23; text-align:center; margin:1.25rem 0;">
+  ✨ Designed for women who are still cycling — whether your rhythm is regular, shifting, or supported — 
+  and want to understand your body’s signals through every phase of change.
+</p>
 
     <p>For 5 days, I’ll be in your ear (video's & email) — helping you
       untangle the fog, the fatigue, the rage, the cravings, the heartbreak of not
