--- a/blueprint/index.html
+++ b/blueprint/index.html
@@ -325,7 +325,31 @@
         <p class="price">£197</p>
       </div>
 
-      <a href="#" class="cta">Join the Blueprint Waitlist</a>
+<!-- Blueprint Waitlist Form -->
+<div class="card" style="padding:2rem; margin-top:1.5rem;">
+  <h3 style="margin-top:0; text-align:center; color:var(--deep);">
+    Join the Blueprint Waitlist
+  </h3>
+
+  <!-- Sender script -->
+  <script>
+    (function (s, e, n, d, er) {
+      s['Sender'] = er;
+      s[er] = s[er] || function () {
+        (s[er].q = s[er].q || []).push(arguments)
+      }, s[er].l = 1 * new Date();
+      var a = e.createElement(n),
+          m = e.getElementsByTagName(n)[0];
+      a.async = 1;
+      a.src = d;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
+    sender('5200e1d77e6017')
+  </script>
+
+  <!-- Sender form embed -->
+  <div class="sender-form-field" data-sender-form-id="egJGn3"></div>
+</div>
     </div>
   </section>
 
