--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -210,7 +210,7 @@
   </p>
   <div style="text-align:center; margin-top:14px;">
     <a class="btn secondary" 
-       href="https://artificialmomentum.com/waitlist" 
+       href="https://raw.artificialmomentum.com/blueprint/" 
        style="display:inline-block;background:#ffffff;color:#FC8B73;
               text-decoration:none;padding:12px 20px;
               border:2px solid #FC8B73; border-radius:999px;
