--- a/blueprint/index.html
+++ b/blueprint/index.html
@@ -325,6 +325,80 @@
         <p class="price">£197</p>
       </div>
 
+      <!-- PRICING -->
+<section>
+  <h2>Founding Cohort — Starts April 13th, 2026</h2>
+
+  <div class="pricing">
+
+    <!-- First 5 Free -->
+    <div class="plan">
+      <strong>💎 First 5 Free</strong>
+      <p class="price">£0</p>
+      <p>For women completing Raw to Reset — a thank-you for being the earliest pioneers.</p>
+    </div>
+
+    <hr style="border:none; border-top:1px solid var(--line); margin:1.5rem 0;">
+
+    <!-- Early Bird Full Price -->
+    <div class="plan">
+      <strong>⚡ Early Bird (Pay in Full)</strong>
+      <p class="price">£127</p>
+      <p>Available until March 31st, 2026. Save £70+ compared to instalments.</p>
+    </div>
+
+    <!-- Early Bird Instalments -->
+    <div class="plan" style="margin-top:1.2rem;">
+      <strong>⚡ Early Bird (3-Month Plan)</strong>
+      <p class="price">£42.33 / month</p>
+      <p>3 monthly payments · Total £127.  
+      A softer option if you prefer to spread the cost.</p>
+    </div>
+
+    <hr style="border:none; border-top:1px solid var(--line); margin:1.5rem 0;">
+
+    <!-- Standard Price -->
+    <div class="plan">
+      <strong>🌿 Standard (Pay in Full)</strong>
+      <p class="price">£197</p>
+      <p>From April 1st, 2026.</p>
+    </div>
+
+    <!-- Standard Instalments -->
+    <div class="plan" style="margin-top:1.2rem;">
+      <strong>🌿 Standard (3-Month Plan)</strong>
+      <p class="price">£65.66 / month</p>
+      <p>3 monthly payments · Total £197.</p>
+    </div>
+
+    <!-- Sender form -->
+    <div class="card" style="padding:2rem; margin-top:2rem;">
+      <h3 style="margin-top:0; text-align:center; color:var(--deep);">
+        Join the Blueprint Waitlist
+      </h3>
+
+      <script>
+        (function (s, e, n, d, er) {
+          s['Sender'] = er;
+          s[er] = s[er] || function () {
+            (s[er].q = s[er].q || []).push(arguments)
+          }, s[er].l = 1 * new Date();
+          var a = e.createElement(n),
+              m = e.getElementsByTagName(n)[0];
+          a.async = 1;
+          a.src = d;
+          m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
+        sender('5200e1d77e6017');
+      </script>
+
+      <div class="sender-form-field" data-sender-form-id="egJGn3"></div>
+    </div>
+
+  </div>
+</section>
+
+
 <!-- Blueprint Waitlist Form -->
 <div class="card" style="padding:2rem; margin-top:1.5rem;">
   <h3 style="margin-top:0; text-align:center; color:var(--deep);">
