New pricing structure and FAQ's

--- a/blueprint/index.html
+++ b/blueprint/index.html
@@ -325,7 +325,7 @@
         <p class="price">£197</p>
       </div>
 
-      <!-- PRICING -->
+<!-- PRICING -->
 <section>
   <h2>Founding Cohort — Starts April 13th, 2026</h2>
 
@@ -340,24 +340,17 @@
 
     <hr style="border:none; border-top:1px solid var(--line); margin:1.5rem 0;">
 
-    <!-- Early Bird Full Price -->
+    <!-- Early Bird Pay in Full -->
     <div class="plan">
       <strong>⚡ Early Bird (Pay in Full)</strong>
       <p class="price">£127</p>
-      <p>Available until March 31st, 2026. Save £70+ compared to instalments.</p>
-    </div>
-
-    <!-- Early Bird Instalments -->
-    <div class="plan" style="margin-top:1.2rem;">
-      <strong>⚡ Early Bird (3-Month Plan)</strong>
-      <p class="price">£42.33 / month</p>
-      <p>3 monthly payments · Total £127.  
-      A softer option if you prefer to spread the cost.</p>
+      <p>Available until March 31st, 2026.  
+      <em>Early Bird is a paid-in-full option only.</em></p>
     </div>
 
     <hr style="border:none; border-top:1px solid var(--line); margin:1.5rem 0;">
 
-    <!-- Standard Price -->
+    <!-- Standard Pay in Full -->
     <div class="plan">
       <strong>🌿 Standard (Pay in Full)</strong>
       <p class="price">£197</p>
@@ -368,8 +361,80 @@
     <div class="plan" style="margin-top:1.2rem;">
       <strong>🌿 Standard (3-Month Plan)</strong>
       <p class="price">£65.66 / month</p>
-      <p>3 monthly payments · Total £197.</p>
+      <p>3 monthly payments · Total £197<br>
+      <strong>First payment due at enrolment.</strong><br>
+      Remaining instalments are billed automatically by Stripe.</p>
     </div>
+
+    <!-- Waitlist Form -->
+    <div class="card" style="padding:2rem; margin-top:2rem;">
+      <h3 style="margin-top:0; text-align:center; color:var(--deep);">
+        Join the Blueprint Waitlist
+      </h3>
+
+      <script>
+        (function (s, e, n, d, er) {
+          s['Sender'] = er;
+          s[er] = s[er] || function () {
+            (s[er].q = s[er].q || []).push(arguments)
+          }, s[er].l = 1 * new Date();
+          var a = e.createElement(n),
+              m = e.getElementsByTagName(n)[0];
+          a.async = 1;
+          a.src = d;
+          m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
+        sender('5200e1d77e6017');
+      </script>
+
+      <div class="sender-form-field" data-sender-form-id="egJGn3"></div>
+    </div>
+
+  </div>
+</section>
+
+
+<section>
+  <h2>Frequently Asked Questions</h2>
+
+  <div class="card">
+    <strong>When does enrolment close?</strong>
+    <p>
+      Enrolment is open during Week 1 and Week 2 of the program.  
+      After Day 13, the doors close until the next cohort.
+    </p>
+  </div>
+
+  <div class="card">
+    <strong>Is Early Bird available on instalments?</strong>
+    <p>No. Early Bird is a pay-in-full bonus only. Instalments apply to the standard price.</p>
+  </div>
+
+  <div class="card">
+    <strong>Can I join after the program has started?</strong>
+    <p>
+      Yes — late joiners are welcome up to Day 13.  
+      After Week 2, enrolment closes so the group can stay in rhythm.
+    </p>
+  </div>
+
+  <div class="card">
+    <strong>Do I have to finish paying before the program starts?</strong>
+    <p>
+      No. Only the first payment is due at enrolment.  
+      Your remaining instalments are billed automatically by Stripe.
+    </p>
+  </div>
+
+  <div class="card">
+    <strong>What if I join late?</strong>
+    <p>
+      If you join during Week 1 or 2, you’ll get immediate access to the replays  
+      and can join us live from that point forward.
+    </p>
+  </div>
+
+</section>
 
     <!-- Sender form -->
     <div class="card" style="padding:2rem; margin-top:2rem;">
