portrait image path edit

--- a/blueprint-2026-apr13/index.html
+++ b/blueprint-2026-apr13/index.html
@@ -294,7 +294,7 @@
   <section>
     <h2>Meet Diana</h2>
     <div class="card bio">
-      <img src="portrait1.jpg" alt="Diana Air">
+      <img src="/assets/images/portrait1.jpg" alt="Diana Air">
       <div>
         <p>I know what it feels like to be out of rhythm — tired, foggy, and trying to hold everything together.</p>
         <p>Raw to Reset gave you the foundation.  
