image replace and remove sign up form duplicate

--- a/blueprint-2026-apr13/index.html
+++ b/blueprint-2026-apr13/index.html
@@ -214,7 +214,7 @@
     <p>You reconnected with your rhythm in Raw to Reset.  
     Now it’s time to *live* from it — with confidence, structure, and emotional clarity.</p>
 
-    <img src=".jpg" alt="Blueprint Hero Image" />
+    <img src="/assets/images/hero-blueprint.jpg" alt="Blueprint Hero Image" />
   </section>
 
   <!-- WHAT THIS IS -->
@@ -417,37 +417,6 @@
 
   </div>
 </section>
-
-
-<!-- Blueprint Waitlist Form -->
-<div class="card" style="padding:2rem; margin-top:1.5rem;">
-  <h3 style="margin-top:0; text-align:center; color:var(--deep);">
-    Join the Blueprint Waitlist
-  </h3>
-
-  <!-- Sender script -->
-  <script>
-    (function (s, e, n, d, er) {
-      s['Sender'] = er;
-      s[er] = s[er] || function () {
-        (s[er].q = s[er].q || []).push(arguments)
-      }, s[er].l = 1 * new Date();
-      var a = e.createElement(n),
-          m = e.getElementsByTagName(n)[0];
-      a.async = 1;
-      a.src = d;
-      m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
-    sender('5200e1d77e6017')
-  </script>
-
-  <!-- Sender form embed -->
-  <div class="sender-form-field" data-sender-form-id="egJGn3"></div>
-</div>
-    </div>
-  </section>
-
-</div>
 
 <footer>
   Built by Diana Air Coaching + ECHO · April 13th, 2026  
