--- a/blueprint-2026-apr13/index.html
+++ b/blueprint-2026-apr13/index.html
@@ -219,7 +219,7 @@
     <p>You reconnected with your rhythm in Raw to Reset.  
     Now it’s time to *live* from it — with confidence, structure, and emotional clarity.</p>
 
-  <img src="/assets/images/hero-blueprint.jpg" alt="hero image" class="logo">
+<img src="/assets/images/hero-blueprint.jpg?v=2" alt="Blueprint Hero Image" />
 
   </section>
 
