--- a/blueprint-2026-apr13/index.html
+++ b/blueprint-2026-apr13/index.html
@@ -219,8 +219,7 @@
     <p>You reconnected with your rhythm in Raw to Reset.  
     Now it’s time to *live* from it — with confidence, structure, and emotional clarity.</p>
 
-<img src="assets/images/bp-hero-01.jpg" 
-     alt="Blueprint Hero Image"
+<img src="/assets/images/hero-bp-final-unique-2026.jpg" alt="Blueprint Hero Image"
      style="width:100%; border-radius:var(--radius); margin-top:1rem;">
 
   </section>
