--- a/day5/day5-journal.html
+++ b/day5/day5-journal.html
@@ -104,7 +104,7 @@
       <p>Ready to go deeper?<br>
       The <strong>Diana Air 6-Week Blueprint</strong> expands this foundation into full-cycle mastery — with coaching, rhythm maps, and live guidance.</p>
       <div style="text-align:center;margin-top:14px;">
-        <a class="btn ghost" href="https://artificialmomentum.com/waitlist">Join the 6-Week Blueprint Waitlist</a>
+        <a class="btn ghost" href="https://raw.artificialmomentum.com/diana-air-bp/">Join the 6-Week Blueprint Waitlist</a>
       </div>
     </section>
 
