--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -125,7 +125,7 @@
     </header>
 
     <figure class="hero">
-  <img src="hero1.jpg" alt="Three women smiling together at the gym">
+  <img src="three_women_in_gym_gear_smiling.jpg" alt="Three women smiling together at the gym">
 </figure>
 
 
