added pricing, FAQ's, phase mimic, weeks breakdown.

--- a/day5/day5-recipe.html
+++ b/day5/day5-recipe.html
@@ -140,7 +140,7 @@
     <div class="cta-row">
       <a class="btn" href="day5-cheatsheet.html">← Back to Cheat Sheet</a>
       <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-      <a class="btn ghost" href="#">Join the 6-Week Blueprint</a>
+      <a class="btn ghost" href="https://raw.artificialmomentum.com/diana-air-bp/">Join the 6-Week Blueprint</a>
     </div>
 
     <footer>
