--- a/diana-air-bp/test index.html
+++ b/diana-air-bp/test index.html
@@ -128,7 +128,7 @@
   <!-- HERO -->
   <section class="hero">
     <p>You reconnected with your rhythm in Raw to Reset.<br>
-    Now it's time to *live* from it — with confidence, structure, and emotional clarity.</p>
+    Now it's time to level up and step into — confidence, structure, and emotional clarity.</p>
 
     <img src="new.jpg" alt="Blueprint Hero Image">
   </section>
@@ -160,13 +160,56 @@
         <li>Women in their 30s–40s ready for reinvention</li>
         <li>Past Raw to Reset participants</li>
         <li>Women balancing family, work, identity</li>
-        <li>Those craving emotional steadiness</li>
+        <li>Those craving emotional steadiness and renewed energy</li>
         <li>Anyone wanting clarity, rhythm, grounded power</li>
       </ul>
     </div>
 
     <img src="salmon-women.jpg" alt="Women outdoors" style="width:100%; border-radius:var(--radius); margin-top:1rem;">
   </section>
+
+    <!-- PROGRAM STRUCTURE -->
+  <section>
+    <h2>The 6-Part Blueprint Journey</h2>
+
+    <div class="card">
+      <h3>Week 1 — Grounding + Identity</h3>
+      <p>Nervous-system reset, emotional triage, reflection tools.</p>
+    </div>
+
+    <div class="card">
+      <h3>Week 2 — Cycle Mapping + Hormone Intelligence</h3>
+      <p>Your unique rhythm (menstrual or phase-mimic), energy & nutrition patterns.</p>
+    </div>
+
+    <div class="card">
+      <h3>Week 3 — Relationships + Boundaries</h3>
+      <p>Communication clarity, core needs, micro-boundaries.</p>
+    </div>
+
+    <div class="card">
+      <h3>Week 4 — Body + Mind Reboot</h3>
+      <p>Declutter digital, emotional, and physical overwhelm.</p>
+    </div>
+
+    <div class="card">
+      <h3>Week 5 — Vision + Direction</h3>
+      <p>Purpose, identity evolution, AI planning tools.</p>
+    </div>
+
+    <div class="card">
+      <h3>Week 6 — Integration + Radiance</h3>
+      <p>Embodying your new rhythm. Continuity plan. Celebration.</p>
+    </div>
+  </section>
+
+  <div class="card">
+      <h3>Cycle-Mimicking Add on — How to thrive even during your perimenopause</h3>
+      <p>How to be so tuned into you're feeling and learning how to use nutrition, lifestyle and even HRT to mimic the power of ovulation and the calm of the luteal phase.</p>
+      <p>See Pricing Below</p>
+    </div>
+  </section>
+
 
   <!-- MEET DIANA -->
   <section>
@@ -175,7 +218,8 @@
       <img src="portrait1.jpg" alt="Diana Air">
       <div>
         <p>I know what it feels like to be out of rhythm — tired, foggy, overwhelmed.</p>
-        <p>The Blueprint is where clarity and direction return. It's where you rise into the next version of yourself.</p>
+        <p>The Blueprint is where you learn to live with clarity, direction and emotional steadiness. It's where you rise into the next version of yourself.</p>
+        <p>This isn't about fixing women. This is about learning to lean into everything that makes us powerful.</p>
       </div>
     </div>
   </section>
@@ -221,6 +265,13 @@
       <p>3 monthly payments · Total £197<br>
       <strong>First payment due at enrolment.</strong><br>
       Remaining instalments are billed automatically by Stripe.</p>
+    </div>
+
+    <!-- Cycle Mimicing -->
+    <div class="plan" style="margin-top:1.2rem;">
+      <strong>🌿 Add Available at Chatout</strong>
+      <p class="price">£26.66 </p>
+    
     </div>
 
     <!-- Waitlist Form -->
