--- a/diana-air-bp/test index.html
+++ b/diana-air-bp/test index.html
@@ -309,7 +309,7 @@
     <strong>When does enrolment close?</strong>
     <p>
       Enrolment is open during Week 1 and Week 2 of the program.  
-      After Day 13, the doors close until the next cohort.
+      After Day 13, the doors close until the next cohort June 8th 2026.
     </p>
   </div>
 
@@ -323,7 +323,7 @@
     <p>
       
       Yes — late joiners are welcome up to Day 13.  
-      After Week 2, enrolment closes so the group can stay in rhythm.
+      After Week 2, enrolment closes so the group can stay in rhythm and Blueprint doesn't unsettle your nervous system. Enrolment opens again June 8th 2026.
     </p>
   </div>
 
