--- a/diana-air-bp/youre-in.html
+++ b/diana-air-bp/youre-in.html
@@ -100,7 +100,7 @@
 
       <div class="message">
         <strong>🌟🎉 You're in!</strong>
-        You’ve just claimed your place on the waitlist for <strong>The Diana Air 6-Week Blueprint</strong> — a
+        You’ve just claimed your place on the waitlist for <strong>The Diana Air 6-Week Blueprint</strong> — Where you will
         Rebuild your rhythm. Redefine your power.<br /><br />
         💌 Add connect@artificialmomentum.com to your contacts so that you don't miss the email that will tell you when you can claim your spot.<br /><br />
         If you have questions, reach out to
