--- a/diana-air-bp/index.html
+++ b/diana-air-bp/index.html
@@ -43,6 +43,11 @@
       color: var(--deep);
     }
 
+    h2 {
+      color: var(--deep);
+      margin-bottom: 0.5rem;
+    }
+
     .highlight {
       color: var(--accent);
       font-weight: bold;
@@ -87,6 +92,12 @@
       flex-shrink: 0;
     }
 
+    .pricing-wrapper {
+      max-width: var(--max);
+      margin: 0 auto;
+      padding: 1.5rem;
+    }
+
     .pricing {
       background: white;
       padding: 2rem;
@@ -94,16 +105,15 @@
       border: 1px solid var(--line);
     }
 
-    .cta {
-      display: block;
-      background: var(--accent);
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      border-radius: var(--radius);
-      margin-top: 2rem;
-      text-decoration: none;
-      font-size: 1.2rem;
+    .plan {
+      margin-bottom: 1.2rem;
+    }
+
+    .price {
+      font-size: 1.6rem;
+      font-weight: bold;
+      margin: 0.3rem 0 0.6rem;
+      color: var(--deep);
     }
 
     footer {
@@ -111,6 +121,7 @@
       padding: 2rem 0;
       font-size: 0.9rem;
       opacity: 0.7;
+      margin-top: 3rem;
     }
   </style>
 </head>
@@ -128,7 +139,7 @@
   <!-- HERO -->
   <section class="hero">
     <p>You reconnected with your rhythm in Raw to Reset.<br>
-    Now it's time to *live* from it — with confidence, structure, and emotional clarity.</p>
+    Now it's time to level up — with confidence, structure, and emotional clarity.</p>
 
     <img src="new.jpg" alt="Blueprint Hero Image">
   </section>
@@ -160,12 +171,33 @@
         <li>Women in their 30s–40s ready for reinvention</li>
         <li>Past Raw to Reset participants</li>
         <li>Women balancing family, work, identity</li>
-        <li>Those craving emotional steadiness</li>
+        <li>Those craving emotional steadiness and renewed energy</li>
         <li>Anyone wanting clarity, rhythm, grounded power</li>
       </ul>
     </div>
 
     <img src="salmon-women.jpg" alt="Women outdoors" style="width:100%; border-radius:var(--radius); margin-top:1rem;">
+  </section>
+
+  <!-- PROGRAM STRUCTURE -->
+  <section>
+    <h2>The 6-Part Blueprint Journey</h2>
+
+    <div class="card"><h3>Week 1 — Grounding + Identity</h3><p>Nervous-system reset, emotional triage, reflection tools.</p></div>
+    <div class="card"><h3>Week 2 — Cycle Mapping + Hormone Intelligence</h3><p>Your unique rhythm (menstrual or phase-mimic), energy & nutrition patterns.</p></div>
+    <div class="card"><h3>Week 3 — Relationships + Boundaries</h3><p>Communication clarity, core needs, micro-boundaries.</p></div>
+    <div class="card"><h3>Week 4 — Body + Mind Reboot</h3><p>Declutter digital, emotional, and physical overwhelm.</p></div>
+    <div class="card"><h3>Week 5 — Vision + Direction</h3><p>Purpose, identity evolution, AI planning tools.</p></div>
+    <div class="card"><h3>Week 6 — Integration + Radiance</h3><p>Embodying your new rhythm. Continuity plan. Celebration.</p></div>
+  </section>
+
+  <!-- ADD-ON -->
+  <section>
+    <div class="card">
+      <h3>Cycle-Mimic Add-On — Thriving Through Perimenopause</h3>
+      <p>Learn how to recognise your hormonal landscape and use nutrition, lifestyle, and (if chosen) HRT to mimic the power of ovulation and the calm of the luteal phase.</p>
+      <p><em>Optional add-on — see pricing below.</em></p>
+    </div>
   </section>
 
   <!-- MEET DIANA -->
@@ -175,9 +207,107 @@
       <img src="portrait1.jpg" alt="Diana Air">
       <div>
         <p>I know what it feels like to be out of rhythm — tired, foggy, overwhelmed.</p>
-        <p>The Blueprint is where clarity and direction return. It's where you rise into the next version of yourself.</p>
+        <p>The Blueprint is where you live with clarity, direction and emotional steadiness. It's where you rise into the next version of yourself.</p>
+        <p>This isn't about fixing women. This is about learning to lean into everything that makes us powerful.</p>
       </div>
     </div>
+  </section>
+
+</div>
+
+<!-- PRICING (centred + aligned) -->
+<div class="pricing-wrapper">
+
+  <section>
+    <h2>Founding Cohort — Starts April 13th, 2026</h2>
+
+    <div class="pricing">
+
+      <div class="plan">
+        <strong>💎 First 5 Free</strong>
+        <p class="price">£0</p>
+        <p>For women completing Raw to Reset — a thank-you for being the earliest pioneers.</p>
+      </div>
+
+      <hr style="border:none; border-top:1px solid var(--line); margin:1.5rem 0;">
+
+      <div class="plan">
+        <strong>⚡ Early Bird (Pay in Full)</strong>
+        <p class="price">£127</p>
+        <p>Available until March 31st, 2026.<br><em>Paid-in-full only.</em></p>
+      </div>
+
+      <hr style="border:none; border-top:1px solid var(--line); margin:1.5rem 0;">
+
+      <div class="plan">
+        <strong>🌿 Standard (Pay in Full)</strong>
+        <p class="price">£197</p>
+      </div>
+
+      <div class="plan" style="margin-top:1.2rem;">
+        <strong>🌿 Standard (3-Month Plan)</strong>
+        <p class="price">£65.66 / month</p>
+        <p>
+          3 monthly payments · Total £197<br>
+          <strong>First payment due at enrolment.</strong>
+        </p>
+      </div>
+
+      <div class="plan" style="margin-top:1.2rem;">
+        <strong>✨ Cycle-Mimic Add-On</strong>
+        <p class="price">£26.66</p>
+        <p>Optional for perimenopausal women or anyone wanting deeper rhythm support.</p>
+      </div>
+
+      <div class="card" style="padding:2rem; margin-top:2rem;">
+        <h3 style="margin-top:0; text-align:center; color:var(--deep);">
+          Join the Blueprint Waitlist
+        </h3>
+
+        <script>
+          (function (s, e, n, d, er) {
+            s['Sender'] = er;
+            s[er] = s[er] || function () {
+              (s[er].q = s[er].q || []).push(arguments)
+            }, s[er].l = 1 * new Date();
+            var a = e.createElement(n),
+                m = e.getElementsByTagName(n)[0];
+            a.async = 1;
+            a.src = d;
+            m.parentNode.insertBefore(a, m)
+          })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
+          sender('5200e1d77e6017');
+        </script>
+
+        <div class="sender-form-field" data-sender-form-id="egJGn3"></div>
+      </div>
+
+    </div>
+  </section>
+
+  <section>
+    <h2>Frequently Asked Questions</h2>
+
+    <div class="card">
+      <strong>When does enrolment close?</strong>
+      <p>Enrolment is open during Week 1 and Week 2. After Day 13, doors close until June 8th, 2026.</p>
+    </div>
+
+    <div class="card">
+      <strong>Is Early Bird available on instalments?</strong>
+      <p>No — Early Bird is paid-in-full only.</p>
+    </div>
+
+    <div class="card">
+      <strong>Can I join late?</strong>
+      <p>Yes — until Day 13. After that point, enrolment closes to protect group rhythm.</p>
+    </div>
+
+    <div class="card">
+      <strong>Do I need to finish paying before the start date?</strong>
+      <p>No — only the first payment is due when enrolling.</p>
+    </div>
+
   </section>
 
 </div>
@@ -188,4 +318,5 @@
 
 </body>
 </html>
+
 
