test left align

--- a/diana-air-bp/test index.html
+++ b/diana-air-bp/test index.html
@@ -308,7 +308,7 @@
 
       <!-- SENDER FORM -->
       <div class="card sender-wrapper">
-        <h3 style="text-align:right; margin-top:0;">Join the Blueprint Waitlist</h3>
+        <h3 style="text-align:left; margin-top:0;">Join the Blueprint Waitlist</h3>
 
         <script>
           (function (s, e, n, d, er) {
