--- a/diana-air-bp/test index.html
+++ b/diana-air-bp/test index.html
@@ -174,6 +174,28 @@
       margin-top: 4rem;
       font-size: 0.9rem;
     }
+
+    /* Center Sender form inside the card */
+.sender-wrapper {
+  padding: 1.4rem !important; /* tighter & cleaner */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sender-wrapper .sender-form-field {
+  width: 100%;
+  max-width: 420px; /* ideal for newsletter forms */
+  margin: 0 auto;
+}
+
+/* Sender sometimes injects an iframe — center that too */
+.sender-wrapper iframe,
+.sender-wrapper form {
+  margin: 0 auto !important;
+  display: block !important;
+}
+
   </style>
 </head>
 
