--- a/diana-air-bp/test index.html
+++ b/diana-air-bp/test index.html
@@ -328,9 +328,10 @@
         <p class="price">£26.66</p>
       </div>
 
-      <!-- SENDER FORM -->
-      <div class="card sender-wrapper">
-        <h3 style="text-align:center; margin-top:0;">Join the Blueprint Waitlist</h3>
+<div class="card sender-wrapper">
+  <div class="micro-headline">Your Blueprint Starts Here</div>
+  <div class="divider"></div>
+  <h3 style="text-align:center; margin-top:0;">Join the Blueprint Waitlist</h3>
 
         <script>
           (function (s, e, n, d, er) {
