nudge to the right sender wrapper

--- a/diana-air-bp/test index.html
+++ b/diana-air-bp/test index.html
@@ -196,6 +196,11 @@
   display: block !important;
 }
 
+.sender-wrapper {
+  transform: translateX(+6px); /* tiny nudge to the right */
+}
+
+
   </style>
 </head>
 
