--- a/diana-air-bp/test index.html
+++ b/diana-air-bp/test index.html
@@ -197,7 +197,9 @@
 }
 
 .sender-wrapper {
-  transform: translateX(+15px); /* tiny nudge to the right */
+  display: flex;
+  justify-content: center;
+  padding-left: 20px; /* nudge right */
 }
 
 
