--- a/diana-air-bp/test index.html
+++ b/diana-air-bp/test index.html
@@ -202,6 +202,55 @@
   padding-left: 20px; /* nudge right */
 }
 
+/* ------------------------------ */
+/* 1. Terracotta Halo Background  */
+/* ------------------------------ */
+.sender-wrapper {
+  position: relative;
+  background: #fff;
+  border-radius: 20px;
+  padding: 2.5rem 2rem;
+  margin: 2rem auto;
+  max-width: 520px;
+
+  /* Terracotta halo glow */
+  box-shadow:
+    0 0 0px rgba(213,138,122,0.0),
+    0 0 60px rgba(213,138,122,0.20),    /* soft diffuse glow */
+    0 0 120px rgba(213,138,122,0.15);   /* deeper halo */
+  
+  transition: box-shadow 0.3s ease;
+}
+
+/* ------------------------------ */
+/* 2. Hover Glow Effect           */
+/* ------------------------------ */
+.sender-wrapper:hover {
+  box-shadow:
+    0 0 0px rgba(213,138,122,0.0),
+    0 0 70px rgba(213,138,122,0.28),
+    0 0 140px rgba(213,138,122,0.20);
+}
+
+
+/* ------------------------------------------ */
+/* 3. Ribbon (Option B — subtle warm glow)     */
+/* ------------------------------------------ */
+.ribbon-soft {
+  text-align: center;
+  display: block;
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: #5e3f36;
+  margin-bottom: 0.7rem;
+  opacity: 0.85;
+
+  /* subtle glow behind text */
+  text-shadow:
+    0 0 10px rgba(213,138,122,0.35),
+    0 0 20px rgba(213,138,122,0.20);
+}
+
 
   </style>
 </head>
