--- a/diana-air-bp/test index.html
+++ b/diana-air-bp/test index.html
@@ -384,7 +384,9 @@
         <p class="price">£26.66</p>
       </div>
 
-<div class="card sender-wrapper">
+<span class="ribbon-soft">You’re almost there…</span>
+
+      <div class="card sender-wrapper">
   <div class="micro-headline">Your Blueprint Starts Here</div>
   <div class="divider"></div>
   <h3 style="text-align:center; margin-top:0;">Join the Blueprint Waitlist</h3>
