back to hub link added

--- a/feedback-thanks.html
+++ b/feedback-thanks.html
@@ -118,7 +118,7 @@
   </p>
 
   <div class="cta-row">
-    <a class="btn" href="/index.html">← Back to Raw to Reset</a>
+    <a class="btn" href="/rtr-hub.html">← Back to Raw to Reset Hub</a>
   </div>
 </div>
 
