Hub button added

--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -194,6 +194,11 @@
       <a class="btn ghost" href="https://raw.artificialmomentum.com/day1/day1-journal">✒️ Journal Page</a>
       <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
       <a class="btn ghost" id="print-pdf">Download PDF</a>
+        <div class="cta-row">
+    <a class="btn" href="/rtr-hub.html">← Back to Raw to Reset Hub</a>
+  </div>
+</div>
+
     </div>
 
     <footer>
