button panel replace with added hub

--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -173,12 +173,14 @@
 
 
     <div class="cta-row">
-      <a class="btn" href="day2-video.html">Watch Today’s Video</a>
-      <a class="btn ghost" href="day2-recipe.html">🍽 Recipe of the Day →</a>
-      <a class="btn ghost" href="https://raw.artificialmomentum.com/day2/day2-journal">✒️ Journal Page</a>
-      <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-      <a class="btn ghost" id="print-pdf">Download PDF</a>
-    </div>
+  <a class="btn" href="day2-video.html">Watch Today’s Video</a>
+  <a class="btn ghost" href="day2-recipe.html">🍽 Recipe of the Day</a>
+  <a class="btn ghost" href="https://raw.artificialmomentum.com/day1/day2-journal">✒️ Journal Page</a>
+  <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+  <a class="btn ghost" id="print-pdf">Download PDF</a>
+  <a class="btn" href="/rtr-hub.html">← Back to Raw to Reset Hub</a>
+</div>
+
 
     <footer>
       Questions from yesterday are rolling in — don’t hold back. Your voice helps shape the live wrap-up Zoom call at the end of the reset. ☝
