--- a/day3/day3-cheatsheet.html
+++ b/day3/day3-cheatsheet.html
@@ -173,12 +173,14 @@
 
 
     <div class="cta-row">
-      <a class="btn" href="day3-video.html">Watch Today’s Video</a>
-      <a class="btn ghost" href="day3-recipe.html">🍽 Recipe of the Day</a>
-      <a class="btn ghost" href="https://raw.artificialmomentum.com/day3/day3-journal">✒️ Journal Page</a>
-      <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-      <a class="btn ghost" id="print-pdf">Download PDF</a>
-    </div>
+  <a class="btn" href="day3-video.html">Watch Today’s Video</a>
+  <a class="btn ghost" href="day3-recipe.html">🍽 Recipe of the Day</a>
+  <a class="btn ghost" href="https://raw.artificialmomentum.com/day1/day3-journal">✒️ Journal Page</a>
+  <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+  <a class="btn ghost" id="print-pdf">Download PDF</a>
+  <a class="btn" href="/rtr-hub.html">← Back to Raw to Reset Hub</a>
+</div>
+
 
     <footer>
       💬 What’s landing for you so far? Note your insights — we’ll unpack them together in the live wrap-up Zoom call at the end of the reset.
