--- a/day4/day4-cheatsheet.html
+++ b/day4/day4-cheatsheet.html
@@ -184,12 +184,14 @@
 
 
     <div class="cta-row">
-      <a class="btn" href="day4-video.html">Watch Today’s Video</a>
-      <a class="btn ghost" href="day4-recipe.html">🍽 Recipe of the Day</a>
-      <a class="btn ghost" href="https://raw.artificialmomentum.com/day4/day4-journal">✒️ Journal Page</a>
-      <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-      <a class="btn ghost" id="print-pdf">Download PDF</a>
-    </div>
+  <a class="btn" href="day4-video.html">Watch Today’s Video</a>
+  <a class="btn ghost" href="day4-recipe.html">🍽 Recipe of the Day</a>
+  <a class="btn ghost" href="https://raw.artificialmomentum.com/day1/day4-journal">✒️ Journal Page</a>
+  <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+  <a class="btn ghost" id="print-pdf">Download PDF</a>
+  <a class="btn" href="/rtr-hub.html">← Back to Raw to Reset Hub</a>
+</div>
+
 
     <footer>
       💬 Tomorrow we close the circle — bring your reflections and questions to the live wrap-up Zoom call. You’re almost there.
