--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -183,11 +183,14 @@
 
 
     <div class="cta-row">
-      <a class="btn" href="day5-video.html">Watch Today’s Video</a>
-      <a class="btn ghost" href="https://raw.artificialmomentum.com/day5/day5-recipe">🍽 Recipe of the Day</a>
-      <a class="btn ghost" href="https://raw.artificialmomentum.com/day5/day5-journal">✒️ Journal Page</a>
-      <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-      <a class="btn ghost" id="print-pdf">Download PDF</a>
+  <a class="btn" href="day5-video.html">Watch Today’s Video</a>
+  <a class="btn ghost" href="day5-recipe.html">🍽 Recipe of the Day</a>
+  <a class="btn ghost" href="https://raw.artificialmomentum.com/day1/day5-journal">✒️ Journal Page</a>
+  <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+  <a class="btn ghost" id="print-pdf">Download PDF</a>
+  <a class="btn" href="/rtr-hub.html">← Back to Raw to Reset Hub</a>
+</div>
+
 
       
 
