fix button panels

--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -188,16 +188,13 @@
   <a class="btn ghost" href="https://raw.artificialmomentum.com/day1/day1-journal">✒️ Journal Page</a>
   <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
   <a class="btn ghost" id="print-pdf">Download PDF</a>
-</div>
-
-<div class="cta-row">
   <a class="btn" href="/rtr-hub.html">← Back to Raw to Reset Hub</a>
 </div>
 
+</section>
+   
 
-      
-
-
+</section>
 
       </div>
         <!-- Next Step Card -->
