--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -182,6 +182,8 @@
 </section>
 
 
+</section>
+
 <div class="cta-row">
   <a class="btn" href="day1-video.html">Watch Today’s Video</a>
   <a class="btn ghost" href="day1-recipe.html">🍽 Recipe of the Day</a>
@@ -191,25 +193,26 @@
   <a class="btn" href="/rtr-hub.html">← Back to Raw to Reset Hub</a>
 </div>
 
-
-      </div>
-        <!-- Next Step Card -->
+<!-- Next Step Card -->
 <section class="card tone">
   <h3 style="color:#6b2f23; margin-top:0;">Ready to Keep Building? 🦋 Next Step: Diana Air 6-Week Blueprint</h3>
+
   <p>
-    You’ve just reset in <strong>5 days</strong>. Imagine <strong>6 full weeks</strong> — 
-    every phase mapped, supported, and lived. The Blueprint gives you structure, rhythm sheets, 
-    and live coaching support to make this your new normal.
-    your next chapter — integrating 
-    <strong>nutrition</strong>, <strong>movement</strong>, <strong>supplements</strong>, and <strong>phase-specific physiology</strong> 
-    so you can live in sync with your cycle instead of fighting against it.
+    You’ve just reset in <strong>5 days</strong>. Imagine <strong>6 full weeks</strong> —
+    every phase mapped, supported, and lived. The Blueprint gives you structure, rhythm sheets,
+    and live coaching support to make this your new normal — integrating
+    <strong>nutrition</strong>, <strong>movement</strong>, <strong>supplements</strong>, and
+    <strong>phase-specific physiology</strong> so you can live in sync with your cycle instead of fighting against it.
   </p>
+
   <p style="margin-bottom:14px;">
-    Each week builds on your natural rhythm — aligning energy, mood, and metabolism to support strength, clarity, and confidence through every phase.
+    Each week builds on your natural rhythm — aligning energy, mood, and metabolism to support
+    strength, clarity, and confidence through every phase.
   </p>
+
   <div style="text-align:center; margin-top:14px;">
-    <a class="btn secondary" 
-       href="https://raw.artificialmomentum.com/diana-air-bp/" 
+    <a class="btn secondary"
+       href="https://raw.artificialmomentum.com/diana-air-bp/"
        style="display:inline-block;background:#ffffff;color:#FC8B73;
               text-decoration:none;padding:12px 20px;
               border:2px solid #FC8B73; border-radius:999px;
@@ -218,6 +221,7 @@
     </a>
   </div>
 </section>
+
 
 
 
