--- a/thankyou/youre-in.html
+++ b/thankyou/youre-in.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <link rel="icon" href="/artificial-momentum-favicon-rounded.ico">
+
     <title>You're In — Raw to Reset</title>
     <style>
       :root {
