--- a/day3/day3-cheatsheet.html
+++ b/day3/day3-cheatsheet.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
+      <link rel="icon" href="/artificial-momentum-favicon-rounded.ico">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="color-scheme" content="light dark">
   <title>Day 3 Cheat Sheet — Raw to Reset</title>
