--- a/day3/day3-recipe.html
+++ b/day3/day3-recipe.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+
+    <link rel="icon" href="/artificial-momentum-favicon-rounded.ico">
+
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="color-scheme" content="light dark">
 <meta name="supported-color-schemes" content="light dark">
