--- a/day4/day4-journal.html
+++ b/day4/day4-journal.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+
+    <link rel="icon" href="/artificial-momentum-favicon-rounded.ico">
+
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <!-- 🌓 Dark mode safety -->
 <meta name="color-scheme" content="light dark">
