--- a/diana-air-bp/index.html
+++ b/diana-air-bp/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+
+      <link rel="icon" href="/artificial-momentum-favicon-rounded.ico">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Diana Air — 6-Week Blueprint</title>
 
