edit to print emoji

--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -216,7 +216,7 @@
   <div class="cta-row">
     <a class="btn" href="day1-cheatsheet.html">← Back to Cheat Sheet</a>
     <a class="btn" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-    <button class="btn" onclick="window.print()">🗂️ Download PDF</button>
+    <button class="btn" onclick="window.print()">📄 Download PDF</button>
   </div>
 
   <footer>
